# opengl-engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh
src/: main.cpp
src/primitive/: primitive.cpp  primitive.hpp
src/shader_program/: shader_program.cpp  shader_program.hpp
src/window/: window.cpp  window.hpp
